2000-03-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: add debug messages.
	* Http.cc: initialize bytes_received; add debug messages;
	  simulate eof if pos>=entity_size.
	* HttpDir.cc: fix bug in TR handling, introduced yesterday.
	* Http.cc: fix no-proxy handling, always use proxy for hftp.
	* ftpclass.cc: fix no-proxy handling.

2000-03-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: treat table row as a whole line; remove tags before
	  parsing. (this helps to parse boa_indexer indices, e.g.
	  http://download.sourceforge.net)
	* FtpDirList.cc, FtpListInfo.cc: recognize permissions in EPLF listing.
	* misc.cc, misc.h: (format_perms) new function.
	* ftpclass.cc: treat cat "" as raw LIST.
	* resource.cc: make passive mode the default.

2000-03-17  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc: debug code added.
	* FindJob.cc, FindJob.h: (quiet) new member; use it; set child jobs fg
	  if needed.
	* commands.cc: rm -f.
	* ftpclass.cc: don't delay session re-usage if connection limit is not
	  reached.

2000-03-16  Alexander V. Lukyanov  <lav@yars.free.net>

	* ResMgr.cc: call srandom if range is full.
	* ftpclass.cc: don't fail if port not available, but rather wait
	  and retry.
	* commands.cc: (command) handle args->count()==1.

2000-03-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: disallow filenames with NL;
	  call ReuseAddress if could not get available port.
	* FileAccess.cc: (Rename) assign file1 before Open; (Open) don't Close
	  if not needed.
	* buffer.cc: ignore EINTR from write.
	* NetAccess.cc, NetAccess.h: (ReuseAddress) new method.

2000-03-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, resource.cc: add ftp:web-mode.

2000-03-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: (DataAbort) disregard replies for commands sent
	  before ABOR.

2000-03-10  Alexander V. Lukyanov  <lav@yars.free.net>
